[package]
name = "winhttp"
version = "0.1.0"
edition = "2021"
authors = ["Progre"]

[lib]
crate-type = ['cdylib']

[build-dependencies]
winres = "0.1"

[dependencies]
once_cell = "1.17.0"
windows = { version = "0.44.0", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_Networking_WinHttp",
  "Win32_System_Console"
] }

[package.metadata.winres]
LegalCopyright = "© Progre"
ProductName = "winhttp_https_p_at_net"
FileDescription = "http://p-at.net への接続を https://p-at.net への接続に無理やり改変するツール"
